--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
 	"trailingComma": "none",
 	"printWidth": 100,
 	"semi": false,
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-svelte"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
