--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
+		"@sveltejs/adapter-auto": "^3.0.1",
+		"@sveltejs/kit": "^2.0.4",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
+		"@typescript-eslint/eslint-plugin": "^6.15.0",
+		"@typescript-eslint/parser": "^6.15.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.55.0",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.32",
@@ -27,11 +28,10 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
-		"tailwindcss": "^3.3.6",
+		"tailwindcss": "^3.4.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.9",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0"
+		"vite": "^5.0.10"
 	},
 	"type": "module"
 }
