--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.5.17",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@typescript-eslint/eslint-plugin": "^7.13.1",
-		"@typescript-eslint/parser": "^7.13.1",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.5.0",
+		"@sveltejs/adapter-auto": "^3.2.4",
+		"@sveltejs/kit": "^2.5.26",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.40.0",
-		"postcss": "^8.4.38",
+		"eslint-plugin-svelte": "^2.43.0",
+		"postcss": "^8.4.45",
 		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.5",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"svelte": "5.0.0-next.164",
-		"svelte-check": "^3.8.1",
-		"tailwindcss": "^3.4.4",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.2",
-		"vite": "^5.3.1"
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.6",
+		"svelte": "5.0.0-next.244",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.10",
+		"tslib": "^2.7.0",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.4"
 	},
 	"type": "module"
 }
