--- a/package.json
+++ b/package.json
@@ -12,26 +12,25 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.17.1",
-		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
-		"@typescript-eslint/eslint-plugin": "^7.18.0",
-		"@typescript-eslint/parser": "^7.18.0",
+		"@sveltejs/vite-plugin-svelte": "5.0.3",
+		"@tailwindcss/vite": "^4.0.3",
+		"@typescript-eslint/eslint-plugin": "^8.23.0",
+		"@typescript-eslint/parser": "^8.23.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.19.0",
-		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
-		"postcss": "^8.5.1",
-		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "5.0.0-next.244",
-		"svelte-check": "^3.8.6",
-		"tailwindcss": "^3.4.17",
+		"svelte": "5.19.7",
+		"svelte-check": "^4.1.4",
+		"tailwindcss": "^4.0.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
-		"vite": "^5.4.14"
+		"vite": "^6.0.11"
 	},
 	"type": "module"
 }
